<resources>
    <string name="app_name">AppMultiLanguage</string>
    <string name="Infomation">Phiếu Thông Tin</string>
    <string name="Name">Họ và Tên</string>
    <string name="Email">Email</string>
    <string name="Phone">Số Điện Thoại</string>
    <string name="Confirm">Xác Nhận</string>
    <string name="txt_Hello">Hello</string>
    <string name="txt_Email">Email</string>
    <string name="txt_Phone">Phone number</string>
</resources>
